fix router notify template
